# geniac-demo-dsl2

./: CHANGELOG  README.md  main.nf
conf/: geniac.config
docs/: output.md  profiles.md  usage.md
env/: alpine.env
modules/fromSource/: CMakeLists.txt
nf-modules/local/process/: alpine.nf  checkDesign.nf  execBinScript.nf  fastqc.nf  getSoftwareVersions.nf  helloWorld.nf  multiqc.nf  outputDocumentation.nf  standardUnixCommand.nf  trickySoftware.nf  workflowSummaryMqc.nf
nf-modules/local/subworkflow/: myWorkflow0.nf  myWorkflow1.nf
recipes/conda/: trickySoftware.yml
recipes/docker/: alpine.Dockerfile
recipes/singularity/: alpine.def
test/: design.csv  metadata.tsv
